--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="max-w-6xl mx-auto">
 			
 
-<table width="auto" border="0">
+<table width="auto" border="0" aling="center">
   <tbody>
     <tr>
 		<h2 class="text-4xl font-bold text-center mb-16"><center>Proceso Creativo</center></h2> 
