--- a/index.html
+++ b/index.html
@@ -70,13 +70,9 @@
         <div class="max-w-6xl mx-auto">
 			
 
-<table width="800" border="0" aling="center">
-  <tbody>
-    <tr>
+
 		<h2 class="text-4xl font-bold text-center mb-16"><center>Proceso Creativo</center></h2> 
-    </tr>
-    <tr>
-      <td> <div class="grid grid-cols-20 md:grid-cols-4 gap-8">
+<div class="grid grid-cols-20 md:grid-cols-4 gap-8">
                 <div class="text-center p-30 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                     <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
@@ -84,8 +80,8 @@
                     <h3 class="text-xl font-semibold mb-2">Consulta inicial</h3>
                     <p class="text-gray-600">Conocemos tu historia y visión</p>
                 </div>
-            </div></td>
-      <td> <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            </div>
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                   <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
@@ -93,8 +89,8 @@
                     <h3 class="text-xl font-semibold mb-2">Desarrollo creativo&nbsp;</h3>
                     <p class="text-gray-600">Conocemos tu historia y visión</p>
                 </div>
-            </div></td>
-	 <td> <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            </div>
+	 <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                   <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
@@ -102,11 +98,7 @@
                     <h3 class="text-xl font-semibold mb-2">Revisión final y entrega&nbsp;</h3>
                     <p class="text-gray-600">Conocemos tu historia y visión</p>
                 </div>
-            </div> </td>	
-    </tr>
-  </tbody>
-</table>
-
+            </div>
            
         </div>
     </section>
