--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<h2 class="text-4xl font-bold text-center mb-16"><center>Proceso Creativo</center></h2> 
 	<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         	<div class="text-center p-6 bg-white rounded-xl shadow-lg justify-float hover:shadow-xl transition duration-300">
-                    <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-left mx-auto mb-4">
+                    <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Consulta inicial</h3>
@@ -79,8 +79,8 @@
                 </div>
         </div>
 	<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
-                  <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-left mx-auto mb-4">
+                <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl justify-content:space-around transition duration-300">
+                  <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Desarrollo creativo&nbsp;</h3>
@@ -89,7 +89,7 @@
             </div>
 	 <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
-                  <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-left mx-auto mb-4">
+                  <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Revisión final y entrega&nbsp;</h3>
