--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
         </div>
 	<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl justify-content:space-around transition duration-300">
+                <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl justify-float transition duration-300">
                   <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
                     </div>
