--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="max-w-6xl mx-auto">
 	<h2 class="text-4xl font-bold text-center mb-16"><center>Proceso Creativo</center></h2> 
 	<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-        	<div class="text-center p-6 bg-white rounded-xl shadow-lg justify-float hover:shadow-xl transition duration-300">
+        	<div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                     <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
                     </div>
@@ -78,8 +78,8 @@
                     <p class="text-gray-600">Conocemos tu historia y visión</p>
                 </div>
         </div>
-	<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl justify-float transition duration-300">
+	<div class="grid grid-cols-1 md:grid-cols-4 gap-8 justify-float">
+                <div class="text-center p-6 bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                   <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-comments text-2xl text-purple-600"></i>
                     </div>
