--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Song Creation | Personalized Music</title>
-    <meta name="description" content="Create your perfect custom song with our professional songwriting service. From weddings to special occasions, we craft unique musical memories.">
+    <title>Creacion de Canciones Personalizadas | Musica Personalizada</title>
+    <meta name="description" content="Crea tu canción personalizada perfecta con nuestro servicio profesional de composición. Desde bodas hasta ocasiones especiales, creamos recuerdos musicales únicos.">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -13,53 +13,53 @@
     <section class="relative h-screen flex items-center justify-center" style="background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80'); background-size: cover; background-position: center;">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="relative text-center text-white z-10 px-4">
-            <h1 class="text-5xl md:text-6xl font-bold mb-6">Your Story, Our Music</h1>
-            <p class="text-xl md:text-2xl mb-8">Create a unique song that captures your special moment</p>
-            <button class="bg-primary hover:bg-primary/90 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all">Start Your Song Journey</button>
+            <h1 class="text-5xl md:text-6xl font-bold mb-6">Tu historia, Nuestra música</h1>
+            <p class="text-xl md:text-2xl mb-8">Crea una canción única que capture tu momento especial.</p>
+            <button class="bg-primary hover:bg-primary/90 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all">Comienza tu viaje musical</button>
         </div>
     </section>
 
     <!-- Pricing Plans -->
     <section class="py-20 px-4 bg-white">
-        <h2 class="text-4xl font-bold text-center mb-16">Choose Your Perfect Package</h2>
+        <h2 class="text-4xl font-bold text-center mb-16">Elige tu paquete perfecto</h2>
         <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
             <!-- Basic Plan -->
             <div class="border border-border rounded-lg p-8 hover:shadow-lg transition-shadow">
-                <h3 class="text-2xl font-bold mb-4">Basic Melody</h3>
+                <h3 class="text-2xl font-bold mb-4">Melodía Básica</h3>
                 <p class="text-4xl font-bold mb-6">$299</p>
                 <ul class="space-y-3 mb-8">
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Professional Recording</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Digital Download</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>1 Revision</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Grabación Profesional</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Descarga Digital</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>1 Revisión</li>
                 </ul>
-                <button class="w-full bg-secondary hover:bg-secondary/90 text-foreground font-bold py-3 rounded-lg">Select Basic</button>
+                <button class="w-full bg-secondary hover:bg-secondary/90 text-foreground font-bold py-3 rounded-lg">Selección Básica</button>
             </div>
 
             <!-- Premium Plan -->
             <div class="border-2 border-primary rounded-lg p-8 shadow-lg transform scale-105">
-                <h3 class="text-2xl font-bold mb-4">Premium Composition</h3>
+                <h3 class="text-2xl font-bold mb-4">Composición Premium</h3>
                 <p class="text-4xl font-bold mb-6">$499</p>
                 <ul class="space-y-3 mb-8">
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Professional Recording</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Digital Download</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>3 Revisions</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Multiple Instruments</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Grabación Profesional</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Descarga Digital</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>3 Revisiones</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Multiples Instrumentos</li>
                 </ul>
-                <button class="w-full bg-primary hover:bg-primary/90 text-white font-bold py-3 rounded-lg">Select Premium</button>
+                <button class="w-full bg-primary hover:bg-primary/90 text-white font-bold py-3 rounded-lg">Selección Premium</button>
             </div>
 
             <!-- Deluxe Plan -->
             <div class="border border-border rounded-lg p-8 hover:shadow-lg transition-shadow">
-                <h3 class="text-2xl font-bold mb-4">Deluxe Experience</h3>
+                <h3 class="text-2xl font-bold mb-4">Experiencia de lujo</h3>
                 <p class="text-4xl font-bold mb-6">$799</p>
                 <ul class="space-y-3 mb-8">
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Professional Recording</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Digital Download</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Unlimited Revisions</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Full Orchestra</li>
-                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Music Video</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Grabación Profesinal</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Descarga Digital</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Revisiones ilimitadas</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Orquesta Completa</li>
+                    <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Vídeo Musical</li>
                 </ul>
-                <button class="w-full bg-secondary hover:bg-secondary/90 text-foreground font-bold py-3 rounded-lg">Select Deluxe</button>
+                <button class="w-full bg-secondary hover:bg-secondary/90 text-foreground font-bold py-3 rounded-lg">Selecciona Deluxe</button>
             </div>
         </div>
     </section>
