--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="relative text-center text-white z-10 px-4">
             <h1 class="text-5xl md:text-6xl font-bold mb-6">Tu historia, Nuestra música</h1>
             <p class="text-xl md:text-2xl mb-8">Crea una canción única que capture tu momento especial.</p>
-            <button class="bg-green hover:bg-green/90 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all">Comienza tu viaje musical</button>
+            <button class="bg-primary hover:bg-primary/90 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all">Comienza tu viaje musical</button>
         </div>
     </section>
 
