--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Creacion de Canciones Personalizadas | Musica Personalizada</title>
     <meta name="description" content="Crea tu canción personalizada perfecta con nuestro servicio profesional de composición. Desde bodas hasta ocasiones especiales, creamos recuerdos musicales únicos.">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    
-    <!-- link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="bg-background font-sans">
