--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Custom Song Creation | Personalized Music</title>
     <meta name="description" content="Create your perfect custom song with our professional songwriting service. From weddings to special occasions, we craft unique musical memories.">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://tailwind.config.js" rel="stylesheet">
+    <!-- link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" -->
+    <!-- link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" -->
 </head>
 <body class="bg-background font-sans">
     <!-- Hero Section -->
