--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body class="bg-background font-sans text-foreground">
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center" style="background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80'); background-size: cover; background-position: center;">
+    <section class="relative h-screen flex items-center justify-center" style="background-image: url('./img/fondo_cab.png'); background-size: cover; background-position: center;">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="relative text-center text-white z-10 px-4">
             <h1 class="text-5xl md:text-6xl font-bold mb-6">Tu historia, nuestra música</h1>
