--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
         <div class="relative text-center text-white z-10 px-4">
             <h1 class="text-5xl md:text-6xl font-bold mb-6">Tu historia, nuestra música</h1>
             <p class="text-xl md:text-2xl mb-8">Crea una canción única que capture tu momento especial.</p>
-            <a href="#whatsappForm">
+            <a href="#viaje">
             <button class="bg-primary hover:bg-primary/90 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all">Comienza tu viaje musical</button>
             </a>    
         </div>
     </section>
 
     <!-- Pricing Plans -->
-    <section class="py-20 px-4 bg-white">
+    <section class="py-20 px-4 bg-white" id="viaje">
         <h2 class="text-4xl font-bold text-center mb-16">Elige tu paquete perfecto</h2>
         <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
             <!-- Basic Plan -->
             <div class="border-2 border-primary rounded-lg p-8 hover:shadow-lg transition-shadow">
                 <h3 class="text-2xl font-bold mb-4">Melodía básica</h3>
-                <p class="text-4xl font-bold mb-6">$999</p>
+                <p class="text-4xl font-bold mb-6">$299 dlls</p>
                 <ul class="space-y-3 mb-8">
                     <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Grabación profesional</li>
                     <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Descarga digital</li>
@@ -68,7 +68,7 @@
             <!-- Premium Plan -->
             <div class="border-2 border-primary rounded-lg p-8 shadow-lg transform scale-105">
                 <h3 class="text-2xl font-bold mb-4">Composición Premium</h3>
-                <p class="text-4xl font-bold mb-6">$7,999</p>
+                <p class="text-4xl font-bold mb-6">$499 dlls</p>
                 <ul class="space-y-3 mb-8">
                     <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Grabación profesional</li>
                     <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Descarga digital</li>
@@ -81,7 +81,7 @@
             <!-- Deluxe Plan -->
             <div class="border-2 border-primary rounded-lg p-8 hover:shadow-lg transition-shadow">
                 <h3 class="text-2xl font-bold mb-4">Experiencia de lujo</h3>
-                <p class="text-4xl font-bold mb-6">$19,999</p>
+                <p class="text-4xl font-bold mb-6">$799 dlls</p>
                 <ul class="space-y-3 mb-8">
                     <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Grabación Profesional</li>
                     <li class="flex items-center"><i class="fas fa-check text-primary mr-2"></i>Descarga digital</li>
@@ -138,7 +138,6 @@
 
     <!-- Request Form -->
 <section class="py-20 px-4 bg-white">
-    <div class="whatsappForm" id="whatsappForm">
     <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-md max-w-[400px] mx-auto">
         <h1 class="text-2xl font-bold text-gray-800 mb-6 text-center">Contáctanos por WhatsApp</h1>
         
@@ -195,7 +194,6 @@
             </button>
         </form>
     </div>
-</div>
 </section>
           
     <!-- Testimonials -->
