--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                 <label for="service" class="block text-sm font-medium text-gray-700 mb-1">Servicio de interés</label>
                 <select id="service" name="service" 
                         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500">
-                    <option value="Basico">Paquete Básico ($299)</option>
-                    <option value="Premium">Paquete Premium ($499)</option>
-                    <option value="Deluxe">Paquete Deluxe ($799)</option>
+                    <option value="Basico">Paquete Básico ($299 dlls)</option>
+                    <option value="Premium">Paquete Premium ($499 dlls)</option>
+                    <option value="Deluxe">Paquete Deluxe ($799 dlls)</option>
                 </select>
             </div>
             
